--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -12,6 +12,8 @@ framework:
         cookie_secure: auto
         cookie_samesite: lax
         storage_factory_id: session.storage.factory.native
+    form:
+        legacy_error_messages: false
 
     #esi: true
     #fragments: true
